--- a/index.html
+++ b/index.html
@@ -12,57 +12,92 @@
 <header>
   <nav>
     <ul>
-      <li><a href="#home">Home</a></li>
-      <li><a href="#about">About Us</a></li>
-      <li><a href="#shop">Shop</a></li>
-      <li><a href="#contact">Contact</a></li>
+<!--      <li><a href="#home">Home</a></li>-->
+      <li><a href="#about">О нас</a></li>
+      <li><a href="#shop">Дизайны</a></li>
+      <li><a href="#contact">Контакты</a></li>
     </ul>
   </nav>
-  <h1>Your Digital Invitations</h1>
-  <p>Create and share beautiful invitations for any occasion in seconds.</p>
-  <a href="#shop" class="cta-button">Explore Designs</a>
+  <h1>Digital Invitations</h1>
+  <p>Создавай и делись красивыми приглашениями для любого праздника</p>
+  <a href="#shop" class="cta-button">Выбрать Дизайн</a>
+<!--  <div class="marquee">
+    <div class="wave-text">Digital Invitations </div>
+      <div class="wave-text">Digital Invitations </div>
+      <div class="wave-text">Digital Invitations </div>
+      <div class="wave-text">Digital Invitations </div>
+&lt;!&ndash;      <span class="wave-text">Digital Invitations</span>&ndash;&gt;
+  </div>-->
 </header>
 
 <section id="shop" class="product-section">
-  <h2>Our Invitations</h2>
+  <h2>Приглашения</h2>
   <div class="product">
+<!--    <a href="https://sofiyshka03.github.io/Wedding-Invitation/" >-->
     <img src="img.png" alt="Birthday Invitation">
     <h3>Birthday Invitation</h3>
-    <p>$4.99</p>
+    <p>2500 ₽</p>
+    <a href="https://sofiyshka03.github.io/Wedding-Invitation/" class="prod-button">Посмотреть</a>
+<!--    </a>-->
   </div>
   <div class="product">
+<!--    <a href="https://sofiyshka03.github.io/Nikkah-Invitation/" >-->
     <img src="pic2.png" alt="Wedding Invitation">
     <h3>Wedding Invitation</h3>
-    <p>$9.99</p>
+    <p>2500 ₽</p>
+    <a href="https://sofiyshka03.github.io/Nikkah-Invitation/" class="prod-button">Посмотреть</a>
+<!--    </a>-->
   </div>
   <div class="product">
+<!--    <a href="https://sofiyshka03.github.io/Wedding-Invitation-2/" >-->
     <img src="pic3.png" alt="Holiday Invitation">
     <h3>Holiday Invitation</h3>
-    <p>$7.99</p>
+    <p>2500 ₽</p>
+    <a href="https://sofiyshka03.github.io/Wedding-Invitation-2/" class="prod-button">Посмотреть</a>
+<!--    </a>-->
   </div>
   <div class="product">
+<!--    <a href="https://sofiyshka03.github.io/Wedding-Invitation-3/" >-->
     <img src="pic4.png" alt="Holiday Invitation">
     <h3>Holiday Invitation</h3>
-    <p>$7.99</p>
+    <p>2500 ₽</p>
+    <a href="https://sofiyshka03.github.io/Wedding-Invitation-3/" class="prod-button">Посмотреть</a>
+<!--    </a>-->
   </div>
 </section>
 
 <section id="about" class="about-section">
-  <h2>About Us</h2>
-  <p>We provide customizable digital invitations for all occasions. Whether it's a birthday, wedding, or corporate event, we have a design to suit your needs.</p>
+  <h2>О нас</h2>
+  <p>Мы предоставляем настраиваемые электронные приглашения на все случаи жизни. Будь то день рождения, свадьба или корпоративное мероприятие, у нас есть дизайн, который вам подойдет.</p>
 </section>
 
 <footer>
   <section id="contact" class="contact-section">
-    <h2>Contact Us</h2>
+    <h2>Контакты</h2>
     <div class = "contact-links">
-      <a href="https://t.me/sSofiyshka" target="_blank" class="btn contact-details"><i class="fab fa-telegram fa-beat-fade" style="color: #54330c;margin-right: 10px;"></i></a>
-      <a href="https://api.whatsapp.com/send?phone=79772629721" target="_blank" class="btn contact-details"><i class="fab fa-whatsapp fa-beat-fade" style="color: #54330c;margin-right: 10px;"></i></a>
-      <a href="https://www.instagram.com/p/Cu6HJHPtlVf/?igshid=MzRlODBiNWFlZA==" target="_blank" class="btn contact-details"><i class="fab fa-instagram fa-beat-fade" style="color: #54330c;margin-right: 10px;"></i></a>
+      <a href="https://t.me/sSofiyshka" target="_blank" class="btn contact-details"><i class="fab fa-telegram fa-beat-fade" style="color: #54330c;margin-right: 15px;"></i></a>
+      <a href="https://api.whatsapp.com/send?phone=79772629721" target="_blank" class="btn contact-details"><i class="fab fa-whatsapp fa-beat-fade" style="color: #54330c;margin-right: 15px;"></i></a>
+      <a href="https://www.instagram.com/p/Cu6HJHPtlVf/?igshid=MzRlODBiNWFlZA==" target="_blank" class="btn contact-details"><i class="fab fa-instagram fa-beat-fade" style="color: #54330c;margin-right: 15px;"></i></a>
       <a href="mailto:suniyatullina00@mail.com" class="btn contact-details"><i class="fas fa-envelope fa-beat-fade" style="color: #54330c;"></i></a>
     </div>
   </section>
 </footer>
+
+<!--<div id="birthday" class="modal">-->
+<!--  <div class="modal-content">-->
+<!--    <span class="close-btn" onclick="closeModal('birthday')">&times;</span>-->
+<!--    <h2>Birthday Invitation</h2>-->
+<!--    <p>Здесь можно показать подробности или содержание приглашения на день рождения.</p>-->
+<!--  </div>-->
+<!--</div>-->
+
+<!--<div id="wedding" class="modal">-->
+<!--  <div class="modal-content">-->
+<!--    <span class="close-btn" onclick="closeModal('wedding')">&times;</span>-->
+<!--    <h2>Wedding Invitation</h2>-->
+<!--    <p>Здесь можно показать подробности или содержание свадебного приглашения.</p>-->
+<!--  </div>-->
+<!--</div>-->
 
 <script src="scripts.js"></script>
 </body>
