--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <div class="product">
 <!--    <a href="https://sofiyshka03.github.io/Wedding-Invitation/" >-->
     <img src="img.png" alt="Birthday Invitation">
-    <h3>Birthday Invitation</h3>
+    <h3>Танец бабочек</h3>
     <p>2500 ₽</p>
     <a href="https://sofiyshka03.github.io/Wedding-Invitation/" class="prod-button">Посмотреть</a>
 <!--    </a>-->
@@ -43,7 +43,7 @@
   <div class="product">
 <!--    <a href="https://sofiyshka03.github.io/Nikkah-Invitation/" >-->
     <img src="pic2.png" alt="Wedding Invitation">
-    <h3>Wedding Invitation</h3>
+    <h3>Золотая гармония</h3>
     <p>2500 ₽</p>
     <a href="https://sofiyshka03.github.io/Nikkah-Invitation/" class="prod-button">Посмотреть</a>
 <!--    </a>-->
@@ -51,7 +51,7 @@
   <div class="product">
 <!--    <a href="https://sofiyshka03.github.io/Wedding-Invitation-2/" >-->
     <img src="pic3.png" alt="Holiday Invitation">
-    <h3>Holiday Invitation</h3>
+    <h3>Цветочная симфония</h3>
     <p>2500 ₽</p>
     <a href="https://sofiyshka03.github.io/Wedding-Invitation-2/" class="prod-button">Посмотреть</a>
 <!--    </a>-->
@@ -59,7 +59,7 @@
   <div class="product">
 <!--    <a href="https://sofiyshka03.github.io/Wedding-Invitation-3/" >-->
     <img src="pic4.png" alt="Holiday Invitation">
-    <h3>Holiday Invitation</h3>
+    <h3>Сиреневый рассвет</h3>
     <p>2500 ₽</p>
     <a href="https://sofiyshka03.github.io/Wedding-Invitation-3/" class="prod-button">Посмотреть</a>
 <!--    </a>-->
@@ -75,9 +75,9 @@
   <section id="contact" class="contact-section">
     <h2>Контакты</h2>
     <div class = "contact-links">
-      <a href="https://t.me/sSofiyshka" target="_blank" class="btn contact-details"><i class="fab fa-telegram fa-beat-fade" style="color: #54330c;margin-right: 15px;"></i></a>
-      <a href="https://api.whatsapp.com/send?phone=79772629721" target="_blank" class="btn contact-details"><i class="fab fa-whatsapp fa-beat-fade" style="color: #54330c;margin-right: 15px;"></i></a>
-      <a href="https://www.instagram.com/p/Cu6HJHPtlVf/?igshid=MzRlODBiNWFlZA==" target="_blank" class="btn contact-details"><i class="fab fa-instagram fa-beat-fade" style="color: #54330c;margin-right: 15px;"></i></a>
+      <a href="https://t.me/sSofiyshka" target="_blank" class="btn contact-details"><i class="fab fa-telegram fa-beat-fade" style="color: #54330c;"></i></a>
+      <a href="https://api.whatsapp.com/send?phone=79772629721" target="_blank" class="btn contact-details"><i class="fab fa-whatsapp fa-beat-fade" style="color: #54330c;"></i></a>
+      <a href="https://www.instagram.com/sofiyka003/profilecard/?igsh=MTJxZmRieXRvenpxMA==" target="_blank" class="btn contact-details"><i class="fab fa-instagram fa-beat-fade" style="color: #54330c;"></i></a>
       <a href="mailto:suniyatullina00@mail.com" class="btn contact-details"><i class="fas fa-envelope fa-beat-fade" style="color: #54330c;"></i></a>
     </div>
   </section>
