--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <img src="img.png" alt="Birthday Invitation">
     <h3>Танец бабочек</h3>
     <p>2500 ₽</p>
-    <a href="https://sofiyshka03.github.io/Wedding-Invitation/" class="prod-button">Посмотреть</a>
+    <a href="https://sofiyshka03.github.io/WD-Butterfly-Dance/" class="prod-button">Посмотреть</a>
 <!--    </a>-->
   </div>
   <div class="product">
@@ -45,7 +45,7 @@
     <img src="pic2.png" alt="Wedding Invitation">
     <h3>Золотая гармония</h3>
     <p>2500 ₽</p>
-    <a href="https://sofiyshka03.github.io/Nikkah-Invitation/" class="prod-button">Посмотреть</a>
+    <a href="https://sofiyshka03.github.io/WD-Golden-Harmony/" class="prod-button">Посмотреть</a>
 <!--    </a>-->
   </div>
   <div class="product">
@@ -53,7 +53,7 @@
     <img src="pic3.png" alt="Holiday Invitation">
     <h3>Цветочная симфония</h3>
     <p>2500 ₽</p>
-    <a href="https://sofiyshka03.github.io/Wedding-Invitation-2/" class="prod-button">Посмотреть</a>
+    <a href="https://sofiyshka03.github.io/WD-Flower-Symphony/" class="prod-button">Посмотреть</a>
 <!--    </a>-->
   </div>
   <div class="product">
@@ -61,7 +61,7 @@
     <img src="pic4.png" alt="Holiday Invitation">
     <h3>Сиреневый рассвет</h3>
     <p>2500 ₽</p>
-    <a href="https://sofiyshka03.github.io/Wedding-Invitation-3/" class="prod-button">Посмотреть</a>
+    <a href="https://sofiyshka03.github.io/WD-Lilac-Dawn/" class="prod-button">Посмотреть</a>
 <!--    </a>-->
   </div>
 </section>
@@ -83,21 +83,6 @@
   </section>
 </footer>
 
-<!--<div id="birthday" class="modal">-->
-<!--  <div class="modal-content">-->
-<!--    <span class="close-btn" onclick="closeModal('birthday')">&times;</span>-->
-<!--    <h2>Birthday Invitation</h2>-->
-<!--    <p>Здесь можно показать подробности или содержание приглашения на день рождения.</p>-->
-<!--  </div>-->
-<!--</div>-->
-
-<!--<div id="wedding" class="modal">-->
-<!--  <div class="modal-content">-->
-<!--    <span class="close-btn" onclick="closeModal('wedding')">&times;</span>-->
-<!--    <h2>Wedding Invitation</h2>-->
-<!--    <p>Здесь можно показать подробности или содержание свадебного приглашения.</p>-->
-<!--  </div>-->
-<!--</div>-->
 
 <script src="scripts.js"></script>
 </body>
